hphp/hack/test/typecheck/method_redeclaration_renamed_conflict.php.exp
File "method_redeclaration_renamed_conflict.php", line 17, characters 19-19:
T3 and T2 both declare ambiguous implementations of f. (Typing[4285])
File "method_redeclaration_renamed_conflict.php", line 17, characters 19-19:
T3's definition is here.
File "method_redeclaration_renamed_conflict.php", line 11, characters 19-19:
T2's definition is here.
File "method_redeclaration_renamed_conflict.php", line 17, characters 19-19:
Redeclare f in C with a compatible signature.
